--- a/index.html
+++ b/index.html
@@ -7,55 +7,59 @@
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <script src="https://kit.fontawesome.com/2c827c8cca.js" crossorigin="anonymous"></script>
-
 </head>
 
 <body>
   <div class="navbar">
-    <a href="#" class="nav-item">Gmail</a>
-    <a href="#" class="nav-item">Images</a>
+    <a href="#" class="navitem">Gmail</a>
+    <a href="#" class="navitem">Images</a>
     <i class="fa-solid fa-bars"></i>
   </div>
-  <div class="main">
+
+
+
+  <div class="main-location">
     <div>
-      <img src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png" width=272px />
+      <img src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png" width=272 />
     </div>
     <div class="input-area">
       <i class="fa-solid fa-magnifying-glass search-icon"></i>
-      <input type="text" class="input-box" />
+      <input type="text" class="input-shape" />
       <i class="fa-solid fa-microphone mic-icon"></i>
+      <i class="fa-solid fa-camera camera-icon"></i>
     </div>
-    <div class="button-area ">
-      <button class="button-style">Google Search</button>
-      <button class="button-style">I'm feeling lucky</button>
+    <div class="button-area">
+      <button class="button-style">Google Search</button><button class="button-style">I'm Feeling Lucky</button>
     </div>
-    <div>
+    <div class="offered-area offered-font">
       Google offered in:
-      <a href="#" class="offer-item">한국어</a>
-      <a href="#" class="offer-item">English</a>
-      <a href="#" class="offer-item">日本語</a>
-      <a href="#" class="offer-item">Français</a>
+      <a href="#" class="offered-style">한국어</a>
+      <a href="#" class="offered-style">English</a>
+      <a href="#" class="offered-style">日本語</a>
+      <a href="#" class="offered-style">Français</a>
     </div>
   </div>
+
   <div class="footer">
     <div class="first-line">
-      Korea
+      South Korea
     </div>
     <div class="second-line">
       <span>
-        <a href="#" class="second-line-font">About</a>
-        <a href="#" class="second-line-font">Advertising</a>
-        <a href="#" class="second-line-font">Business</a>
-        <a href="#" class="second-line-font">How Search works</a>
+        <a href="#" class="secocnd-line-too">About</a>
+        <a href="#" class="secocnd-line-too">Advertisng</a>
+        <a href="#" class="secocnd-line-too">Business</a>
+        <a href="#" class="secocnd-line-too">How Search works</a>
       </span>
 
-      <span class="second-line-second">
-        <a href="#" class="second-line-font">Privacy</a>
-        <a href="#" class="second-line-font">Term</a>
-        <a href="#" class="second-line-font">Settings</a>
+      <span class="second-line-right ">
+        <a href="#" class="secocnd-line-too">Privacy</a>
+        <a href="#" class="secocnd-line-too">Terms</a>
+        <a href="#" class="secocnd-line-too">Settings</a>
       </span>
     </div>
   </div>
+
 </body>
 
 </html>
